# mimir

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  install.sh  mimir-ai-harness-addendum.md  mimir-blueprint.md  mimir-calendar-addendum.md  mimir-messaging-bridge-addendum.md
backend/: Dockerfile  pyproject.toml
backend/src/: config.py  main.py  mcp_server.py
backend/src/agent/: connection_finder.py  daily_brief.py  digest.py  notifications.py  prompts.py  resurface.py  runtime.py  signals.py  taxonomy.py
backend/src/api/: agent_router.py  browse_router.py  export_router.py  import_router.py  search_router.py  settings_router.py
backend/src/bridge/: dispatcher.py  handler.py  intent.py  models.py  router.py  security.py
backend/src/capture/: email_watcher.py  file_watcher.py  router.py
backend/src/harness/: __init__.py  router.py
backend/src/knowledge/: database.py  document_store.py  models.py  vector_store.py
backend/src/processing/: chunker.py  dispatcher.py  embedder.py  extractor.py  linker.py  normalizer.py  pipeline.py  prompts.py  synthesizer.py
backend/src/search/: engine.py
backend/tests/: test_bridge_handler.py  test_bridge_intent.py
tui/: package-lock.json  pyproject.toml
tui/mimir_tui/: __main__.py  app.py  app.tcss  cli.py  client.py  config.py  helpers.py  welcome.py
tui/mimir_tui/commands/: agent.py  browse.py  capture.py  manage.py  query.py  system.py
tui/mimir_tui/screens/: agent.py  browse.py  capture.py  connections.py  dashboard.py  note_detail.py  search.py  settings.py
tui/mimir_tui/wizard/: wizard_app.py  (+1 more)
(+39 files in other folders)
